Add Frontmatter to workspace vocabulary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "liveSassCompile.settings.generateMap": false,
     "liveSassCompile.settings.autoprefix": [],
     "cSpell.words": [
-        "Chyno"
+        "Chyno",
+        "Frontmatter"
     ],
 }
