--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "@hono/node-server": "^1.1.1",
     "adm-zip": "^0.5.10",
     "eta": "^3.1.1",
-    "highlight.js": "^11.8.0",
     "hono": "^3.6.0",
-    "marked": "^9.0.0",
-    "marked-highlight": "^2.0.6"
+    "marked": "^9.0.0"
   }
 }
