Update version, keywords and author entries in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog-doc",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "The simplest Node.js CMS and SSG!",
   "main": "index.js",
   "type": "module",
@@ -8,8 +8,29 @@
     "build": "node functions/build/build.js",
     "fire": "node index.js"
   },
-  "keywords": [],
-  "author": "LebCit",
+  "keywords": [
+    "backend",
+    "blog",
+    "blog-doc",
+    "build-tool",
+    "cms",
+    "content",
+    "content-management",
+    "frontend",
+    "generator",
+    "litenode",
+    "management",
+    "markdown",
+    "nodejs",
+    "site",
+    "site-generator",
+    "ssg",
+    "static",
+    "static-site",
+    "system",
+    "template"
+  ],
+  "author": "LebCit (https://lebcit.github.io/)",
   "license": "MIT",
   "dependencies": {
     "@hono/node-server": "^1.11.0",
