Add `rss` and `sitemap` links to menu

--- a/config/settings.json
+++ b/config/settings.json
@@ -20,6 +20,8 @@
         "tags": "Tags",
         "search": "Search",
         "pages/documentation": "Documentation",
+        "rss": "RSS",
+        "sitemap": "Sitemap",
         "https://github.com/LebCit/blog-doc": "GitHub Repo",
         "bd-admin": "Admin ⚡"
     }
